add swagger to confirm match
