# app/Http/Controllers/MatchesController.php
@@ -56,7 +56,7 @@ class MatchesController extends Controller
         ], 200);
     }
 
-    //create Register Team
+    //create new match
     /**
      *   @SWG\Post(
      *     path="/api/Seasons/{season}/Event/matches",
@@ -101,7 +101,7 @@ class MatchesController extends Controller
     }
 
 
-    //create Register Team
+    //update match
     /**
      *   @SWG\Put(
      *     path="/api/Seasons/{season}/Event/update-match/{match}",
@@ -485,6 +485,49 @@ class MatchesController extends Controller
 
 
 
+
+
+
+
+    //confirm match Result
+    /**
+     *   @SWG\Post(
+     *     path="/api/Seasons/{season}/Event/matches/{match}/confirm",
+     *     description = "post confirm matche Result ",
+     *     produces={"application/json"},
+     *     operationId="POST_confirm_matche",
+     *     tags={"Match"},
+     *     @SWG\Parameter(
+     *          name="season",
+     *          in="path",
+     *          required=true,
+     *          type="string",
+     *          description="season ID",
+     *      ),
+     *     @SWG\Parameter(
+     *          name="match",
+     *          in="path",
+     *          required=true,
+     *          type="string",
+     *          description="match ID",
+     *      ),
+     *     @SWG\Parameter(
+     *          name="body",
+     *          in="body",
+     *          schema={"$ref": "#/definitions/match_confirm"},
+     *          required=true
+     *      ),
+     *      @SWG\Response(
+     *         response = 200,
+     *         description = "SUCCESSFULLY DONE"
+     *     ),
+     *     @SWG\Response(
+     *         response=401, 
+     *         description="Bad request"
+     *      )
+     *     
+     * )
+     */
     public function confirmResult(Season $season, Match $match, MatchesRepo $matchRepo)
     {
 
